tests/NormalTests/paczka1/fuzzy1/94541753.err
Error in line 1: SWIT3F2kZS S531 34,8
Error in line 18: 6wZ2NTUI S~90 84,8
Error in line 24: S190 S545 20,4
Error in line 25: tfYpCKM73 S545 95,0
Error in line 28: tfYpCKM73 S307 56,2
Error in line 23: SWIT3F2kZS S545 246,2
Error in line 33: tfYpCKM73 S545 30,9
Error in line 15: 4rxG8As6d S531 61,1
